// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`jeden startující 1`] = `
<div
  className="StartujiciProTyp-grid"
>
  <div
    className="StartujiciProTyp-item"
  >
    7
  </div>
</div>
`;

exports[`třináct startujících 1`] = `
<div
  className="StartujiciProTyp-grid"
>
  <div
    className="StartujiciProTyp-item"
  >
    7
  </div>
  <div
    className="StartujiciProTyp-item"
  >
    4
  </div>
  <div
    className="StartujiciProTyp-item"
  >
    16
  </div>
  <div
    className="StartujiciProTyp-item"
  >
    25
  </div>
  <div
    className="StartujiciProTyp-item"
  >
    9
  </div>
  <div
    className="StartujiciProTyp-item"
  >
    15
  </div>
  <div
    className="StartujiciProTyp-item"
  >
    1
  </div>
  <div
    className="StartujiciProTyp-item"
  >
    8
  </div>
  <div
    className="StartujiciProTyp-item"
  >
    59
  </div>
  <div
    className="StartujiciProTyp-item"
  >
    43
  </div>
  <div
    className="StartujiciProTyp-item"
  >
    42
  </div>
  <div
    className="StartujiciProTyp-item"
  >
    33
  </div>
  <div
    className="StartujiciProTyp-item"
  >
    21
  </div>
  <div
    className="StartujiciProTyp-item"
  >
    24
  </div>
  <div
    className="StartujiciProTyp-item"
  >
    27
  </div>
  <div
    className="StartujiciProTyp-item"
  >
    22
  </div>
  <div
    className="StartujiciProTyp-item"
  >
    30
  </div>
  <div
    className="StartujiciProTyp-item"
  >
    23
  </div>
  <div
    className="StartujiciProTyp-item"
  >
    26
  </div>
</div>
`;

exports[`žádný startující 1`] = `
<div
  className="StartujiciProTyp-grid"
/>
`;
